<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout">

    <data>

        <variable
            name="viewModel"
            type="com.yagiz.learn.todo.auth.register.RegisterActivityViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_appname"
            style="@style/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="getDone"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@id/et_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_username"
            style="@style/input_field"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/background_input"
            android:gravity="center"
            android:hint="Username"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.username}"
            app:layout_constraintBottom_toTopOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_appname"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_email"
            style="@style/input_field"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_input"
            android:gravity="center"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintBottom_toTopOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_password"
            style="@style/input_field"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_input"
            android:gravity="center"
            android:hint="Password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            android:textColorHint="@color/black_disabled"
            app:layout_constraintBottom_toTopOf="@id/tv_signin"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_button"
            android:enabled="@{viewModel.signInButtonEnabled}"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onRegisterButtonClicked()}"
            android:text="SIGN IN"
            android:textColor="@color/white_high_importancy"
            app:layout_constraintBottom_toTopOf="@id/tv_or"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/v_dash_left"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:background="@color/black_med_importancy"
            app:layout_constraintBottom_toTopOf="@id/tv_connect_with_google"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toBottomOf="@id/tv_signin"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="14dp"
            android:text="OR"
            android:textColor="@color/black_med_importancy"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/tv_connect_with_google"
            app:layout_constraintEnd_toStartOf="@+id/v_dash_left"
            app:layout_constraintStart_toEndOf="@+id/v_dash_right"
            app:layout_constraintTop_toBottomOf="@id/tv_signin"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/v_dash_right"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:background="@color/black_med_importancy"
            app:layout_constraintBottom_toTopOf="@id/tv_connect_with_google"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_signin"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_connect_with_google"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/common_google_signin_btn_text_dark_normal_background"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onGoogleSignInClicked()}"
            android:text="@string/common_signin_button_text_long"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/common_google_signin_btn_icon_dark"
            app:layout_constraintBottom_toBottomOf="@id/tv_connect_with_google"
            app:layout_constraintLeft_toLeftOf="@id/tv_connect_with_google"
            app:layout_constraintTop_toTopOf="@id/tv_connect_with_google" />

        <android.support.constraint.Group
            android:id="@+id/group_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="v_dash_right,v_dash_left,tv_or" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

    </android.support.constraint.ConstraintLayout>
</layout>
