<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.yagiz.learn.todo.view.RegisterActivityViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:text="Welcome"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/tv_welcome"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_input"
            android:gravity="center"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@={viewModel.email}" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/et_email"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_input"
            android:gravity="center"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@={viewModel.password}" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/background_button"
            android:clickable="@{viewModel.signInButtonEnabled}"
            android:enabled="@{viewModel.signInButtonEnabled}"
            android:onClick="@{() -> viewModel.onSignInButtonClicked()}"
            android:text="Sign-in"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>